# fleet_telemetry_recorder

./: README.md  install.sh  pyproject.toml
fleet_telemetry_recorder/: __main__.py  cleanup_server.py  config.py  recorder.py  writer.py
systemd/: fleet-telemetry-recorder.service
telemetry_viewer/: README.md  motan_adapter.py  motion_analysis.py  requirements.txt  telemetry_viewer.py
