[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fleet-telemetry-recorder"
version = "0.1.0"
description = "Per-print motion + temperature telemetry recorder for Klipper, feeding the fleet_daemon telemetry archive."
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8",
]

[project.scripts]
fleet-telemetry-recorder = "fleet_telemetry_recorder.__main__:main"

[tool.setuptools.packages.find]
include = ["fleet_telemetry_recorder*"]
